--- a/advent-of-code2023.cabal
+++ b/advent-of-code2023.cabal
@@ -25,10 +25,11 @@ executable advent-of-code2023
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Day00, Day01
+    other-modules: Day00, Day01, Day02, Day03
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.17.2.0
+    build-depends:    base ^>=4.17.2.0, split, text
     hs-source-dirs:   app
     default-language: Haskell2010
+    default-extensions: OverloadedStrings, DuplicateRecordFields, NoFieldSelectors, OverloadedRecordDot
