--- a/advent-of-code2023.cabal
+++ b/advent-of-code2023.cabal
@@ -32,4 +32,4 @@ executable advent-of-code2023
     build-depends:    base ^>=4.17.2.0, split, text
     hs-source-dirs:   app
     default-language: Haskell2010
-    default-extensions: OverloadedStrings, DuplicateRecordFields, NoFieldSelectors, OverloadedRecordDot
+    default-extensions: OverloadedStrings, DuplicateRecordFields, OverloadedRecordDot
