--- a/advent-of-code2023.cabal
+++ b/advent-of-code2023.cabal
@@ -25,7 +25,7 @@ executable advent-of-code2023
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Day00, Day01, Day02, Day03
+    other-modules: Day00, Day01, Day02, Day03, Day04
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
